--- a/templates/cores_bancas.html
+++ b/templates/cores_bancas.html
@@ -5,15 +5,17 @@
 {% endcomment %}
 
 <script>
-  var color_banca_final = '#74a559';
-  var color_banca_intermediaria = '#e6b734';
-  var color_banca_falconi = '#ff38a6';
+  var color_banca_final = "#74A559";
+  var color_banca_intermediaria = "#E6B734";
+  var color_banca_falconi = "#FF38A6";
+  var color_probation = "#FF8C00";
 </script>
 
 <style>
   :root {
-    --color_banca_final: #74a559;
-    --color_banca_intermediaria: #e6b734;
-    --color_banca_falconi: #ff38a6;
+    --color_banca_final: #74A559;
+    --color_banca_intermediaria: #E6B734;
+    --color_banca_falconi: #FF38A6;
+    --color_probation: #FF8C00;
   }
 </style>
