--- a/templates/display_notas_individuais.html
+++ b/templates/display_notas_individuais.html
@@ -28,31 +28,37 @@
   <tr>
     <td><b>Notas</b></td>
     {% for aval, nota, peso, descr in notas %}
-    <td style="cursor:pointer; white-space: nowrap;" data-toggle="tooltip" data-html="true" animation="true" 
-    title="{{descr}} | peso={% widthratio peso 1 100 %}%">
-      <span class="short">{{aval}}</span><span class="long">{{descr}}</span> = {% if peso > 0 %}{{nota|floatformat:1}}{% else %}{% if nota > 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
-      {% if peso > 0 %}
-      <script>
-        nota += {{nota|unlocalize}} * {{peso|unlocalize}};
-        peso += {{peso|unlocalize}};
-      </script>
-    {% endif %}
-  </td>
-    
-  {% endfor %}
+      {% if user.tipo_de_usuario != 1 or aval != "P" %} {% comment %} Mais uma solução porca para os estudantes não verem muito cedo suas notas de probation {% endcomment %}
+        <td style="cursor:pointer; white-space: nowrap;" data-toggle="tooltip" data-html="true" animation="true" 
+        title="{{descr}} | peso={% widthratio peso 1 100 %}%">
+          <span class="short">{{aval}}</span><span class="long">{{descr}}</span> = {% if peso > 0 %}{{nota|floatformat:1}}{% else %}{% if nota > 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
+          {% if peso > 0 %}
+            <script>
+              nota += {{nota|unlocalize}} * {{peso|unlocalize}};
+              peso += {{peso|unlocalize}};
+            </script>
+          {% endif %}
+        </td>
+      {% endif %}
+    {% endfor %}
   
-  <td>
-  <b>Média = <span id="media{{alocado.id}}"></span> <span id="aviso{{alocado.id}}"></span></b>
-  <script>
-    if(peso > 0.0) {
-      document.getElementById("media{{alocado.id}}").innerHTML = loc(nota);
-      if(peso < 0.99) {
-        document.getElementById("aviso{{alocado.id}}").innerHTML = "<span style='white-space: nowrap;''> (média provisória = " + loc(nota/peso) +  ")</span>";
+    <td>
+    <b>Média = <span id="media{{alocado.id}}"></span> <span id="aviso{{alocado.id}}"></span></b>    
+    <script>
+      if(peso > 0.0) {
+        {% with media=alocado.get_media %}
+          {% if media %}
+            document.getElementById("media{{alocado.id}}").innerHTML = "{{media.media|floatformat:1}}";
+          {% else %}
+            document.getElementById("media{{alocado.id}}").innerHTML = loc(nota);
+          {% endif %}
+        {% endwith %}
+        if(peso < 0.99) {
+            document.getElementById("aviso{{alocado.id}}").innerHTML = "<span style='white-space: nowrap;''> (média provisória = " + loc(nota/peso) +  ")</span>";
+        }
       }
-    }
-  </script>
-  </td>
-
+    </script>
+    </td>
 
   </tr>
 </tbody></table>
