--- a/users/templates/users/edita_nota.html
+++ b/users/templates/users/edita_nota.html
@@ -60,7 +60,7 @@
 
         {% with avaliadores=avaliacoes|pega_avaliadores:composicao.exame|add_orientador:alocacao.projeto %}
         {% for aval_id, aval_first_name, aval_last_name in avaliadores %}
-          <b>{{composicao.exame.titulo}} [{{aval_first_name}} {{aval_last_name}}] : <span id="a{{composicao.exame.id}}_media"></span></b>
+          <b>{{composicao.exame.titulo}} [{{aval_first_name}} {{aval_last_name}}] : <span id="a{{composicao.exame.id}}_media_p{{aval_id}}"></span></b>
           <ul>
             {% with avaliacoes=avaliacoes|pega_tipo:composicao.exame|pega_avaliador:aval_id %}
             {% for peso in composicao.peso_set.all %}
@@ -69,8 +69,8 @@
                 {% with objetivo=avaliacoes|pega_objetivo:peso.objetivo %}
                   <div class="bloco_avali">
                     peso: 
-                    <input class="peso" id="a{{composicao.exame.id}}_peso_{{peso.objetivo.id}}"
-                          name="a{{composicao.exame.id}}_peso_{{peso.objetivo.id}}" type="number"
+                    <input class="peso" id="a{{composicao.exame.id}}_peso_{{peso.objetivo.id}}_p{{aval_id}}"
+                          name="a{{composicao.exame.id}}_peso_{{peso.objetivo.id}}_p{{aval_id}}" type="number"
                           min="0" max="100" step="any" style="width: 5em;"
                           value="{% if objetivo.peso %}{{objetivo.peso}}{% else %}{{peso.peso}}{% endif %}"
                           {% if user.tipo_de_usuario != 4 %}disabled{% endif %}
@@ -78,8 +78,8 @@
                   </div>
                   <div class="bloco_avali">
                     nota: 
-                    <input class="nota" id="a{{composicao.exame.id}}_nota_{{peso.objetivo.id}}"
-                          name="a{{composicao.exame.id}}_nota_{{peso.objetivo.id}}" type="number"
+                    <input class="nota" id="a{{composicao.exame.id}}_nota_{{peso.objetivo.id}}_p{{aval_id}}"
+                          name="a{{composicao.exame.id}}_nota_{{peso.objetivo.id}}_p{{aval_id}}" type="number"
                           min="0" max="10" step="any" style="width: 4em;"
                           {% if objetivo.nota != None %}value="{{objetivo.nota}}"{% endif %}
                           {% if user.tipo_de_usuario != 4 %}disabled{% endif %}
@@ -88,11 +88,11 @@
                         
                   <div class="bloco_avali">
                     conceito:
-                    <select class="conc" id="a{{composicao.exame.id}}_conc_{{peso.objetivo.id}}"
-                            name="a{{composicao.exame.id}}_conc_{{peso.objetivo.id}}"
+                    <select class="conc" id="a{{composicao.exame.id}}_conc_{{peso.objetivo.id}}_p{{aval_id}}"
+                            name="a{{composicao.exame.id}}_conc_{{peso.objetivo.id}}_p{{aval_id}}"
                             {% if user.tipo_de_usuario != 4 %}disabled{% endif %}
                             {% if aval_id != alocacao.projeto.orientador.user.id %}disabled{% endif %}>
-                          {% with 'A+ A B+ B C+ C D+ D D- I' as conceitos %}{% for x in conceitos.split %}
+                          {% with "A+ A B+ B C+ C D+ D D- I" as conceitos %}{% for x in conceitos.split %}
                             <option value="{{x}}">{{x}}</option>
                           {% endfor %}{% endwith %}
                     </select>
@@ -100,14 +100,14 @@
 
                   <script>
                     $(function() {
-                        $("#a{{composicao.exame.id}}_conc_{{peso.objetivo.id}}").on("change",function() {
-                          $("#a{{composicao.exame.id}}_nota_{{peso.objetivo.id}}").val(converteC($(this).val()));
+                        $("#a{{composicao.exame.id}}_conc_{{peso.objetivo.id}}_p{{aval_id}}").on("change",function() {
+                          $("#a{{composicao.exame.id}}_nota_{{peso.objetivo.id}}_p{{aval_id}}").val(converteC($(this).val()));
                         });
-                        $("#a{{composicao.exame.id}}_nota_{{peso.objetivo.id}}").on("change",function() {
-                          $("#a{{composicao.exame.id}}_conc_{{peso.objetivo.id}}").val(converteN($(this).val()));
+                        $("#a{{composicao.exame.id}}_nota_{{peso.objetivo.id}}_p{{aval_id}}").on("change",function() {
+                          $("#a{{composicao.exame.id}}_conc_{{peso.objetivo.id}}_p{{aval_id}}").val(converteN($(this).val()));
                         });
                     })
-                    $("#a{{composicao.exame.id}}_conc_{{peso.objetivo.id}}").val(converteN($("#a{{composicao.exame.id}}_nota_{{peso.objetivo.id}}").val()));
+                    $("#a{{composicao.exame.id}}_conc_{{peso.objetivo.id}}_p{{aval_id}}").val(converteN($("#a{{composicao.exame.id}}_nota_{{peso.objetivo.id}}_p{{aval_id}}").val()));
                   </script>
 
                 {% endwith %}
@@ -118,11 +118,11 @@
           </ul>
           {% with observacoes=observacoes|pega_tipo:composicao.exame|pega_avaliador:aval_id %}
             <span style="display: inline-block; margin-top: 6px; margin-left: 10px;">Observações para Estudantes:</span><br>
-            <textarea id="a{{composicao.exame.id}}_obs_estudantes" name="a{{composicao.exame.id}}_obs_estudantes"
+            <textarea id="a{{composicao.exame.id}}_obs_estudantes_p{{aval_id}}" name="a{{composicao.exame.id}}_obs_estudantes_p{{aval_id}}"
                       rows="4" cols="80" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}
               >{% if observacoes.last.observacoes_estudantes %}{{observacoes.last.observacoes_estudantes}}{% endif %}</textarea>
             <span style="display: inline-block; margin-top: 6px; margin-left: 10px;">Observações para Orientador:</span><br>
-            <textarea id="a{{composicao.exame.id}}_obs_orientador" name="a{{composicao.exame.id}}_obs_orientador"
+            <textarea id="a{{composicao.exame.id}}_obs_orientador_p{{aval_id}}" name="a{{composicao.exame.id}}_obs_orientador_p{{aval_id}}"
                       rows="4" cols="80" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}
               >{% if observacoes.last.observacoes_orientador %}{{observacoes.last.observacoes_orientador}}{% endif %}</textarea>
             <br>
@@ -153,7 +153,7 @@
   <br><br>
 
   <script>
-    $('form input').keydown(function (e) {
+    $("form input").keydown(function (e) {
       if (e.keyCode == 13) {
           e.preventDefault();
           return false;
@@ -171,8 +171,8 @@
             total = 0.0;
             {% for peso in composicao.peso_set.all %}
               {% with objetivo=avaliacoes|pega_objetivo:peso.objetivo %}
-                nota = parseFloat($("#a{{composicao.exame.id}}_nota_{{peso.objetivo.id}}").val());
-                peso = parseFloat($("#a{{composicao.exame.id}}_peso_{{peso.objetivo.id}}").val());
+                nota = parseFloat($("#a{{composicao.exame.id}}_nota_{{peso.objetivo.id}}_p{{aval_id}}").val());
+                peso = parseFloat($("#a{{composicao.exame.id}}_peso_{{peso.objetivo.id}}_p{{aval_id}}").val());
                 if( !isNaN(peso)) {
                   if( !isNaN(nota) ) {soma += ( peso * nota );}
                   total += peso;
@@ -181,7 +181,7 @@
             {% endfor %}
             if(total > 0) { media = soma/total; }
             else { media = 0; }
-            $("#a{{composicao.exame.id}}_media").text(media.toFixed(2));
+            $("#a{{composicao.exame.id}}_media_p{{aval_id}}").text(media.toFixed(2));
           {% endwith %}
           {% endfor %}
           {% endwith %}
