exporta documentos dos projetos

--- a/administracao/templates/administracao/index_admin.html
+++ b/administracao/templates/administracao/index_admin.html
@@ -32,8 +32,9 @@
   <h5>Dados</h5>
   <ul>
     <li><a href="{% url 'index_carregar' %}">Carregar Dados</a></li>
+    <li><a href="{% url 'exportar' 'relatorios' %}">Gerar Relatórios</a></li>
     <li><a href="{% url 'exportar' 'dados' %}">Exportar Dados</a></li>
-    <li><a href="{% url 'exportar' 'relatorios' %}">Exportar Relatórios</a></li>
+    <li><a href="{% url 'exportar_documentos_projetos' %}">Exportar Relatórios dos Projetos</a></li>
   </ul>
 
   <hr>
