mostrando documentos com qualquer relação ao projeto

--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -156,7 +156,7 @@
       {% if user.tipo_de_usuario == 4 %}
         <br>
         <div style="padding-left: 46px"> 
-          <a href="{% url 'blackboard_notas' ano_semestre %}">Tabela para Blackboard</a>
+          <a target="_blank" rel="noopener noreferrer" href="{% url 'blackboard_notas' ano_semestre %}">Tabela para Blackboard</a>
         </div>
       {% endif %}
     {% endif %}
