--- a/estudantes/templates/estudantes/minhas_bancas.html
+++ b/estudantes/templates/estudantes/minhas_bancas.html
@@ -7,6 +7,7 @@
 
 {% block head %}
   {% load static %}
+  {% load exibe_notas %}
   <link rel="stylesheet" href="{% static 'css/div_arrend.css' %}">
   <style>
     ul,ol {
@@ -93,34 +94,37 @@
               {% endfor %}
             </ol>
 
-            {% with avaliacao=banca.get_avaliacoes %}
-              {% if avaliacao.objetivos %}
-                <hr>
-                <b>Média dos Conceitos da Banca:</b><br>
-                {% for objetivo, avaliacao in avaliacao.objetivos.items %}
-                  &nbsp;&#x21A3; {{objetivo.titulo}}: {{avaliacao.0|floatformat:2}} ({{avaliacao.1}})<br>
-                {% endfor %}
-                {% if avaliacao.peso > 0 %}
-                  &#10149;<b> Nota final = {{avaliacao.nota|floatformat:2}}</b><br>
-                {% endif %}
-                {% comment %} <small>Obs: Os conceitos e notas da banca vão variar conforme membros da banca postam suas avaliações.<br></small> {% endcomment %}
+            
+            {% if user.tipo_de_usuario != 1 or banca|exibe_notas_banca %} {% comment %} Filtra certas avaliações para estudantes não verem {% endcomment %}
+              {% with avaliacao=banca.get_avaliacoes %}
+                {% if avaliacao.objetivos %}
+                  <hr>
+                  <b>Média dos Conceitos da Banca:</b><br>
+                  {% for objetivo, avaliacao in avaliacao.objetivos.items %}
+                    &nbsp;&#x21A3; {{objetivo.titulo}}: {{avaliacao.0|floatformat:2}} ({{avaliacao.1}})<br>
+                  {% endfor %}
+                  {% if avaliacao.peso > 0 %}
+                    &#10149;<b> Nota final = {{avaliacao.nota|floatformat:2}}</b><br>
+                  {% endif %}
+                  {% comment %} <small>Obs: Os conceitos e notas da banca vão variar conforme membros da banca postam suas avaliações.<br></small> {% endcomment %}
 
-                {% if banca.get_observacoes_estudantes %}
-                  <b style="display: inline-block; margin-top: 14px;">Observações realizadas pelos membros da banca:</b>
-                  
-                    {% for observacao in banca.get_observacoes_estudantes %}
-                      {% if observacao.observacoes_estudantes %}
-                      <div class="pintern" style="padding: 6px;">
-                          <b>{{observacao.avaliador.get_full_name}}</b>:<br>
-                          {{observacao.observacoes_estudantes|linebreaks}}
-                      </div>
-                      {% endif %}
-                    {% endfor %}
-                      
+                  {% if banca.get_observacoes_estudantes %}
+                    <b style="display: inline-block; margin-top: 14px;">Observações realizadas pelos membros da banca:</b>
+                    
+                      {% for observacao in banca.get_observacoes_estudantes %}
+                        {% if observacao.observacoes_estudantes %}
+                        <div class="pintern" style="padding: 6px;">
+                            <b>{{observacao.avaliador.get_full_name}}</b>:<br>
+                            {{observacao.observacoes_estudantes|linebreaks}}
+                        </div>
+                        {% endif %}
+                      {% endfor %}
+                        
+                  {% endif %}
+      
                 {% endif %}
-    
-              {% endif %}
-            {% endwith %}
+              {% endwith %}
+            {% endif %}
           </div>
 
           
