--- a/templates/display_notas_individuais.html
+++ b/templates/display_notas_individuais.html
@@ -6,6 +6,7 @@
 
 {% load static %}
 {% load l10n %}
+{% load exibe_notas %}
 <link rel="stylesheet" href="{% static 'css/one_line.css' %}">
 
 {% comment %} Colocar no head da página {% endcomment %}
@@ -28,7 +29,7 @@
   <tr>
     <td><b>Notas</b></td>
     {% for aval, nota, peso, descr in notas %}
-      {% if user.tipo_de_usuario != 1 or aval != "P" %} {% comment %} Mais uma solução porca para os estudantes não verem muito cedo suas notas de probation {% endcomment %}
+      {% if user.tipo_de_usuario != 1 or alocado|exibe_notas:aval %} {% comment %} Filtra certas avaliações para estudantes não verem {% endcomment %}
         <td style="cursor:pointer; white-space: nowrap;" data-toggle="tooltip" data-html="true" animation="true" 
         title="{{descr}} | peso={% widthratio peso 1 100 %}%">
           <span class="short">{{aval}}</span><span class="long">{{descr}}</span> = {% if peso > 0 %}{{nota|floatformat:1}}{% else %}{% if nota > 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
