mostrando médias individuais

--- a/templates/dados_usuario.html
+++ b/templates/dados_usuario.html
@@ -21,7 +21,7 @@
   <strong>LinkedIn:</strong> <a href="{{user.linkedin}}" target="_blank">{{user.linkedin}}</a><br>
 {% endif %}
 
-<strong>e-mail:</strong> <a href="mailto:{{user.email}}"> &lt;{{user.email}}&gt;</a><br>
+<strong>e-mail:</strong> <a href="mailto:{{user.email}}">{{user.email}}</a><br>
 
 {% if user.telefone or user.celular or user.instant_messaging %}
 
